@@ -1,3 +1,8 @@
+2014-03-12  Corinna Vinschen  <corinna@vinschen.de>
+
+	* Throughout, fix format specifiers in debug statements to accommodate
+	x86_64.
+
 2014-03-06  Corinna Vinschen  <corinna@vinschen.de>
 
 	* setpwd.cc (client_request_setpwd::serve): Use RtlSecureZeroMemory to
